--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "Polars"
 uuid = "10e8eb88-ba63-414b-aef7-c6307136506c"
 authors = ["Samay Kapadia <samay.kapadia@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Clang = "40e3b903-d033-50b4-a0cc-940c62c95e31"
